2007-01-25  Akim Demaille  <demaille@gostai.com>

	Fix include
	* src/uexpression.cc (libport/assert.hh): include it for most
	recent libport.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Coding style changes
	* src/userver.cc: here.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Handle URBI_PATH
	* src/console.cc: in the constructor rather than in the main.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	More passert
	* src/uexpression.cc: here.
	Also, remove debugging code.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Factor the parsing of "at"
	* src/ucommand.hh, src/ucommand.cc: Rename AT_FLAVOR as AT.
	* src/parser/bison/ugrammar.y (and.opt): New.
	Use it to factor the parsing of at.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	UCommand_AT is Flavorable
	* src/uasynccommand.hh (UCommand_AT): Derive from flavorable.
	* src/ucommand.cc: Adjust its implementation.
	* src/ucommand.hh (AT, AT_AND): Remove.
	(AT_FLAVOR): New, temporary.
	* src/parser/bison/ugrammar.y: Adjust.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	* src/ucommand.cc, src/uconnection.cc, src/uexpression.cc,
	* src/userver.cc: Use passert.
	Fix two incorrect assertions of dynamic_cast.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Use passert
	* src/parser/bison/bison.mk: Pass -s to flex so that it does not
	generate a default rule using its own ECHO which does not have the
	same signature as ours.
	* src/uexpression.cc: Use passert for fun.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Factoring
	* src/uvariablename.hh, src/uvariablename.cc (update_array_mangling):
	New.
	Use it.
re

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Simplifications
	* src/parser/bison/ugrammar.y: Use ? :.
	* src/uvariablename.cc (UVariableName::buildFullname): Shorten
	scopes.

2007-01-25  Akim Demaille  <demaille@gostai.com>

	Fix "bin" parsing
	* src/parser/bison/ugrammar.y: The alias is "bin", not "BIN".

2007-01-25  Akim Demaille  <demaille@gostai.com>
